--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_content"
     android:layout_height="match_parent"
-    tools:context="com.modulardemo.MainActivity">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/my_recycle_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-</android.support.constraint.ConstraintLayout>
+    android:layout_width="match_parent"/>
