--- a/feature/src/main/res/layout/list_item2.xml
+++ b/feature/src/main/res/layout/list_item2.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="160dp"
     android:background="#6369d1">
 
     <TextView
         android:id="@+id/my_text_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:paddingBottom="20dp"
+        android:paddingTop="30dp" />
+
+    <FrameLayout
+        android:id="@+id/title_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/my_text_view" />
+</android.support.constraint.ConstraintLayout>
